# efinance

./: .env  .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  README.md  changelog.md  docker-compose.yaml  example.py  pyproject.toml  requirements.txt  setup.py  tea.yaml  tox.ini
docs/: api.md  conf.py  efinance.html  example.md  index.html  index.md  install.md  requirements.txt  search.json
docs/custom-template/: error.html.jinja2  index.html.jinja2  module.html.jinja2
docs/efinance/: bond.html  fund.html  futures.html  stock.html
efinance/: __init__.py  __version__.py  share.py
efinance/api/: __init__.py
efinance/bond/: __init__.py  config.py  getter.py
efinance/common/: __init__.py  config.py  getter.py
efinance/config/: __init__.py
efinance/fund/: __init__.py  config.py  getter.py  utils.py
efinance/futures/: __init__.py  config.py  getter.py  utils.py
efinance/macro/: __init__.py  getter.py
efinance/shared/: __init__.py  tickflow_prompt.py
efinance/stock/: __init__.py  config.py  getter.py  utils.py
efinance/utils/: __init__.py
examples/: bond.ipynb  fund.ipynb  futures.ipynb  stock.ipynb
tests/: test.ipynb
